--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,49 +1,44 @@
-img {
-    position: fixed;
-    z-index: -1;
-    object-fit: cover;
-}
-
 .hero-container {
+    background-image: url('../images/img-home.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-    height: 100vh;
+    height: 92vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-}
-
-.hero-container > h1 {
-    color: #fff;
-    font-size: 120px;
-    font-family: 'Open Sans Condensed', sans-serif;
-    text-transform: uppercase;
-    text-align: center;
-    margin-top: -100px;
+    opacity: .95;
     padding: 20px;
     box-sizing: border-box;
-    letter-spacing: 4px;
 }
 
-.hero-container > p {
-    margin-top: 8px;
+.hero-heading{
     color: #fff;
-    font-size: 32px;
+    font-family: 'Syne Mono', monospace;
+    font-size: 10rem;
+    text-align: center;
+    text-transform: uppercase;
+    box-sizing: border-box;
+    letter-spacing: 4px;
+    line-height: .7;
+}
+
+.hero-text {
+    color: #fff;
+    font-size: 3.2rem;
     font-family: 'Open Sans Condensed', sans-serif;
     letter-spacing: 2px;
+    margin: 40px 0;
 }
 
 .hero-btns {
     display: flex;
-    margin-top: 32px;
 }
 
-.hero-btns .btn {
-    margin: 6px;
+.btn {
+    margin: 0 6px;
 }
 
 .fa-play-circle {
@@ -53,7 +48,7 @@ img {
 @media (max-width: 1200px) {
 
     .hero-container > h1 {
-        font-size: 100px;
+        font-size: 80px;
     }
 
 }
@@ -61,7 +56,7 @@ img {
 @media (max-width: 992px) {
 
     .hero-container > h1 {
-        font-size: 80px;
+        font-size: 70px;
     }
 
 }
@@ -69,7 +64,7 @@ img {
 @media (max-width: 768px) {
 
     .hero-container > h1 {
-        font-size: 60px;
+        font-size: 55px;
     }
 
     .hero-container > p {
@@ -78,18 +73,25 @@ img {
 
     .hero-btns {
         flex-direction: column;
-        align-items: center;
-        width: 185px;
     }
 
     .btn-mobile {
-        display: block;
-        text-decoration: none;
-        width: 100%
+        width: 100%;
     }
 
     .btn {
         width: 100%;
+    }
+
+    .btn-outline {
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width: 587px) {
+
+    .hero-heading {
+        line-height: .8;
     }
 
 }
