--- a/src/reset.css
+++ b/src/reset.css
@@ -25,6 +25,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	font-family: 'Open Sans Condensed', sans-serif;
 }
 ol, ul {
 	list-style: none;
@@ -40,4 +41,7 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+html {
+	font-size: 62.5%;
 }
