--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,7 +8,7 @@
 .navbar-container {
     width: 100%;
     height: 8vh;
-    background: linear-gradient(to right, rgb(17, 17, 17) 0%, rgb(10, 10, 10) 100%);
+    background: linear-gradient(to right, #111111 0%, #0a0a0a 100%);
     padding: 0 50px;
     box-sizing: border-box;
     display: flex;
@@ -57,7 +57,7 @@
     text-decoration: none;
     color: #fff;
     font-size: 2.4rem;
-    letter-spacing: 1px;
+    letter-spacing: 1.5px;
     border-bottom: 4px solid transparent;
     border-top: 4px solid transparent;
     box-sizing: border-box;
@@ -76,7 +76,7 @@
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 2rem;
     font-weight: 300;
-    letter-spacing: 1px;
+    letter-spacing: 1.5px;
 }
 
 @media (max-width: 992px) {
