--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -1,6 +1,6 @@
 .cards {
     padding: 80px;
-    background-color: #0a0a0a;
+    background-color: #fff;
 }
 
 .cards-container {
@@ -10,7 +10,7 @@
 .cards-heading {
     font-family: 'Syne Mono', monospace;
     font-size: 3.4vw;
-    color: #fff;
+    color: #141414;
     letter-spacing: 4px;
     font-weight: 700;
     text-align: center;
@@ -31,6 +31,10 @@
 .cards-list + .cards-list .card-item {
     width: 33.3333%;
     padding: 0 10px 0;
+}
+
+.cards-list + .cards-list .card-item .card-item-text {
+    font-size: 1.1vw;
 }
 
 @media (max-width: 992px) {
