--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -8,7 +8,7 @@
 }
 
 .cards-heading {
-    font-family: 'Syne Mono', monospace;
+    font-family: 'Bungee', cursive;    
     font-size: 3.4vw;
     color: #141414;
     letter-spacing: 4px;
