--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -19,7 +19,7 @@
 
 .cards-wrapper {
     position: relative;
-    margin: 50px 0 0;
+    margin: 80px 0 0;
     width: 100%;
 }
 
@@ -55,6 +55,10 @@
 
     .cards-heading {
         font-size: 4vw;
+    }
+
+    .cards-list + .cards-list .card-item .card-item-text {
+        font-size: 2vw;
     }
 
 }
