--- a/src/components/CardItem.css
+++ b/src/components/CardItem.css
@@ -59,8 +59,8 @@
 .card-item-img-overlay-text {
     width: 100%;
     height: 100%;
-    font-family: 'Syne Mono', monospace;
-    font-size: 40px;
+    font-family: 'Bungee', cursive;    
+    font-size: 3.2rem;
     color: #141414;
     position: absolute;
     top: 0;
@@ -90,18 +90,17 @@
     justify-content: center;
     align-items: center;
     height: 70px;
-    background-color: #fff;
     padding: 15px 15px;
     box-sizing: border-box;
-    box-shadow: 7px 5px 5px -20px rgba(160, 160, 160, 0.2),
-                0px 3px 10px rgba(65, 39, 39, 0.2),
-                -7px 5px 5px -20px rgba(160, 160, 160, 0.2);
+    box-shadow: 7px 5px 5px -20px rgba(78, 78, 78, 0.4),
+                0px 3px 10px rgba(78, 78, 78, 0.4),
+                -7px 5px 5px -20px rgba(78, 78, 78, 0.4);
     border-radius: 0 0 5px 5px;
 }
 
 .card-item-text {
     color: #141414;
-    font-size: 1.3vw;
+    font-size: 1.4vw;
     font-weight: 700;
     letter-spacing: 1.25px;
     text-align: center;
