--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,15 +1,19 @@
+.hero {
+    background-color: #000;
+}
+
 .hero-container {
     background-image: url('../images/img-home.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-    height: 92vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    opacity: .95;
+    opacity: .9;
     padding: 20px;
     box-sizing: border-box;
 }
