Updated Footer Button CSS

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -234,7 +234,7 @@
         margin: 0 0 10px 0;
     }
 
-    .btn {
+    .footer-email-subscribe .btn {
         width: 70%;
         margin: 0
     }
