--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -38,13 +38,13 @@
 
 .footer-email-input {
     width: 40%;
-    height: 100%;
     color: #141414;
     font-size: 2rem;
     font-weight: 300;
     padding: 8px 20px;
     margin-right: 20px;
     outline: none;
+    border: 3px solid #fff;
     box-sizing: border-box;
 }
 
